chore: add gitignore

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <article>
         <h2>About me</h2>
         <p>My name is Sam, and I am a Geodetic Engineer</p>
-        <p>I enjoy coding and stuff</p>
+        <p>I enjoy coding and stuff and cars</p>
     </article>
 
 </body>
