--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <p>My name is Sam, and I am a Geodetic Engineer</p>
         <p>I enjoy coding and stuff and cars</p>
     </article>
-
+    <nav>
+        <a href="/work_phase_1/index.html">Work Phase 1</a>
+        <a href="/work_phase_2/index.html">Work Phase 2</a>
+        <a href="/work_phase_3/index.html">Work Phase 3</a>
+        <a href="/work_phase_4/index.html">Work Phase 4</a>
+    </nav>
 </body>
 
 </html>
