--- a/work_phase_1/index.html
+++ b/work_phase_1/index.html
@@ -13,14 +13,16 @@
 
 <body>
     <header>
-        <h1>Sam's Work Phase 1</h1>
     </header>
-    <section>
-        <p>This page will show Sam's work phase 1</p>
-    </section>
-    <nav>
-        <a href="../index.html">Home</a>
-    </nav>
+    <div class="container">
+        <h1>Sam's Work Phase 1</h1>
+        <section>
+            <p>This page will show Sam's work phase 1</p>
+        </section>
+        <nav>
+            <a href="../index.html">Home</a>
+        </nav>
+    </div>
 </body>
 
 </html>
