--- a/work_phase_1/colour_scheme.html
+++ b/work_phase_1/colour_scheme.html
@@ -5,9 +5,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Style - Guide Colour Scheme</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/layout.css" />
 </head>
 
 <body>
+    <header>
+    </header>
+    <div class="container">
+        <h1>Style Guide</h1>
+        <section>
+            <h2>Colour Scheme</h2>
+            <p>This is the colour scheme for this website</p>
+        </section>
+        <nav>
+            <a href="./index.html">Work Phase 1 Home</a>
+        </nav>
+    </div>
+    <script type="module" src='js/colour_scheme.js'></script>
 </body>
 
 </html>
