--- a/work_phase_1/components.html
+++ b/work_phase_1/components.html
@@ -4,10 +4,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Style - Components</title>
+    <title>Style - Guide Components</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/layout.css" />
 </head>
 
 <body>
+    <header>
+    </header>
+    <div class="container">
+        <h1>Style Guide</h1>
+        <section>
+            <h2>Components</h2>
+            <p>This is the Components for this website</p>
+        </section>
+        <nav>
+            <a href="./index.html">Work Phase 1 Home</a>
+        </nav>
+    </div>
+    <script type="module" src='js/components.js'></script>
 </body>
 
 </html>
