--- a/work_phase_1/typography.html
+++ b/work_phase_1/typography.html
@@ -15,15 +15,51 @@
     <header>
     </header>
     <div class="container">
-        <h1>Style Guide</h1>
-        <section>
-            <h2>Typography</h2>
-            <p>This is the Typography for this website</p>
-        </section>
-        <nav>
-            <a href="./index.html">Work Phase 1 Home</a>
-        </nav>
+        <h1>Typography</h1>
+        <div class="card-container">
+            <div class="simple-card">
+                <h1>H1 Heading Example</h1>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 4rem (64px)</p>
+                <p>Color: var(--color-primary)</p>
+            </div>
+            <div class="simple-card">
+                <h2>H2 Heading Example</h2>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 3rem (48px)</p>
+            </div>
+            <div class="simple-card">
+                <h3>H3 Heading Example</h3>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 1.5rem (24px)</p>
+            </div>
+            <div class="simple-card">
+                <h4>H4 Heading Example</h4>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 1rem (16px)</p>
+                <p>Font Weight: bold</p>
+            </div>
+            <div class="simple-card">
+                <h5>H5 Heading Example</h5>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 0.75rem (12px)</p>
+                <p>Font Weight: bold</p>
+            </div>
+            <div class="simple-card">
+                <p>Paragraph example</p>
+                <p>Font Family: Urbanist, sans-serif</p>
+                <p>Font Size: 1rem (16px)</p>
+            </div>
+        </div>
+        <h1>Line Spacing</h1>
+        <div class="card-container">
+            <div class="simple-card">
+                <p>Line height across the site has been set to 1.5rem. This is to
+                    support accessibility.</p>
+            </div>
+        </div>
     </div>
+
     <script type="module" src='js/typography.js'></script>
 </body>
 
