feat: Week 03 SA3 - Buttons

--- a/work_phase_1/components.html
+++ b/work_phase_1/components.html
@@ -20,9 +20,31 @@
             <h2>Components</h2>
             <p>This is the Components for this website</p>
         </section>
-        <nav>
-            <a href="./index.html">Work Phase 1 Home</a>
-        </nav>
+        <div class="card-container">
+            <div class="simple-card">
+                <h4>Primary Button</h4>
+                <button class="button button-primary">Primary</button>
+            </div>
+            <div class="simple-card">
+                <h4>Secondary Button</h4>
+                <button class="button button-secondary">Secondary</button>
+            </div>
+            <div class="simple-card">
+                <h4>Dark Button</h4>
+                <button class="button button-dark">Dark</button>
+            </div>
+            <div class="simple-card">
+                <h4>Bright Button</h4>
+                <button class="button button-bright">Bright</button>
+            </div>
+        </div>
+        <section>
+            <h2>Links</h2>
+            <a class="button button-primary" href="index.html">WP1 Home</a>
+            <a class="button button-secondary" href="components.html">WP1 Components</a>
+            <a class="button button-dark" href="typography.html">WP</a>
+        </section>
+
     </div>
     <script type="module" src='js/components.js'></script>
 </body>
