--- a/work_phase_1/index.html
+++ b/work_phase_1/index.html
@@ -25,7 +25,9 @@
             <p>This page will show Sam's work phase 1</p>
         </section>
         <nav>
-            <a href="../index.html">Home</a>
+            <a class="button button-primary" href="index.html">WP1 Home</a>
+            <a class="button button-secondary" href="components.html">WP1 Components</a>
+            <a class="button button-dark" href="typography.html">WP</a>
         </nav>
     </div>
 </body>
