--- a/work_phase_1/typography.html
+++ b/work_phase_1/typography.html
@@ -58,6 +58,11 @@
                     support accessibility.</p>
             </div>
         </div>
+        <nav>
+            <a class="button button-primary" href="index.html">WP1 Home</a>
+            <a class="button button-secondary" href="components.html">WP1 Components</a>
+            <a class="button button-dark" href="typography.html">WP</a>
+        </nav>
     </div>
 
     <script type="module" src='js/typography.js'></script>
