feat: Week 03 SA4 - JS Fetch.docx

--- a/work_phase_1/components.html
+++ b/work_phase_1/components.html
@@ -46,7 +46,11 @@
         </section>
 
     </div>
-    <script type="module" src='js/components.js'></script>
+    <div id="temperature-widget" class="temperature-widget">
+        <p>Current Temperature: <span id="temperature-value">--
+            </span>°C</p>
+    </div>
+    <script type="module" src="js/components.js"></script>
 </body>
 
 </html>
