--- a/work_phase_2/client_needs_analysis.html
+++ b/work_phase_2/client_needs_analysis.html
@@ -18,12 +18,119 @@
             <h1>Pete's Work Phase 2</h1>
         </header>
         <section>
-            <h2>What's in this website?</h2>
+            <h2>The Client Brief</h2>
+            <h3>About Us</h3>
             <p>
-                This is the second phase of my work. I will be completing A2
-                Design Research during this page. But all of that assessment
-                will be created as pages in this website.
+                We are a non-profit organisation dedicated to fostering
+                social cohesion by empowering diverse communities to share
+                their stories, <span class="interactive-highlight" data-card="Value 1">connect with others </span>, and
+                access resources
+                that enhance their visibility and influence. Our mission is
+                to strengthen societal bonds by creating platforms that
+                celebrate and support the unique identities of communities
+                across Australia.
             </p>
+            <p>
+                This brief has been prepared for the internal design teams
+                Week 5: Design Research | Creating your Client Needs Analysis Web Page
+                at Connect Communities Initiative (CCI). Each design team is
+                tasked with developing individual concepts and prototypes
+                for dynamic websites that align with CCI’s mission and
+                vision. Our mission is to strengthen societal bonds by
+                creating platforms that celebrate and support the unique
+                identities of communities across Australia.
+            </p>
+            <h3>Project Overview</h3>
+            <p>
+                We are commissioning the development of dynamic,
+                user-friendly websites that represent and support different
+                communities. Each website should serve as a central hub
+                where community members can share resources, highlight
+                events, and foster meaningful connections. The websites must
+                not include any form of commercial activity, such as
+                advertising or selling products. However, it is acceptable
+                to promote resources, events, or services that are directly
+                beneficial to the community.
+            </p>
+            <p>
+                The websites must be accessible, mobile-friendly, and
+                reflect the diverse needs of the selected community focus
+                area while adhering to our mission of inclusivity,
+                accessibility, and ethical design. Each website should also
+                celebrate the unique characteristics of its chosen community
+                and support meaningful interaction and engagement.
+            </p>
+            <h3>Community Focus Areas</h3>
+            <ul>
+                <li>
+                    Cultural and Heritage Communities
+                </li>
+                <li>
+                    Academic and Professional Communities
+                </li>
+                <li>
+                    Wellness and Mental Health Communities
+                </li>
+                <li>
+                    Social and Environmental Advocacy Communities
+                </li>
+                <li>
+                    Regional or International Communities
+                </li>
+                <li>
+                    Creative Arts and Media Communities
+                </li>
+                <li>
+                    Lived Experience Communities
+                </li>
+                <li>
+                    Food and Culinary Communities
+                </li>
+                <li>
+                    Tech and Innovation Communities
+                </li>
+            </ul>
+            <h3>Additional Information</h3>
+            <p><strong>Target Audience</strong></p>
+            <p>Each website must serve two key groups:</p>
+            <ol>
+                <li>
+                    Community Members: Individuals within the selected
+                    community who seek representation, resources, and
+                    connection.
+                </li>
+                <li>
+                    General Audience: Broader society, who can use the
+                    website to learn about the community and its
+                    contributions.
+                </li>
+            </ol>
+            <p>
+                Accessibility must be prioritised to ensure seamless
+                interaction for all users, including those relying on
+                assistive technologies.
+            </p>
+            <p><strong>Project Goals</strong></p>
+            <ol>
+                <li>
+                    Week 5: Design Research | Creating your Client Needs Analysis Web Page
+                    Represent and celebrate the identity of the chosen
+                    community, recognising and representing the diversity
+                    within the community rather than relying on stereotypes.
+                </li>
+                <li>
+                    Provide clear, accessible information and resources to
+                    users.
+                </li>
+                <li>
+                    Foster meaningful connections and support within the
+                    community.
+                </li>
+                <li>
+                    Ensure ethical, inclusive, and culturally sensitive
+                    design principles are upheld.
+                </li>
+            </ol>
         </section>
     </div>
 </body>
