feat: flipping card

--- a/work_phase_2/client_needs_analysis.html
+++ b/work_phase_2/client_needs_analysis.html
@@ -132,6 +132,42 @@
                 </li>
             </ol>
         </section>
+        <section>
+            <h2>Values - Needs - Feature Analysis</h2>
+
+            <div class="value-box">
+                <h3>Value 1: Community Connection</h3>
+
+                <div class="flip-card-container">
+
+
+                    <div class="flip-card" tabindex="0">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <p><strong>Card 1</strong></p>
+                                <p>User needs to easily find and connect with others in their community.
+                                </p>
+                            </div>
+                            <div class="flip-card-back">
+                                <p><strong>
+                                        Suggested Feature: Community Forums or Chat Rooms
+                                    </strong></p>
+                                <p>
+                                    Implement interactive forums or chat rooms where
+                                    community members can engage in discussions, share
+                                    experiences, and support each other. This feature
+                                    should be moderated to ensure a safe and respectful
+                                    environment.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
