feat: user stories page

--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -14,16 +14,45 @@
 
 <body>
     <div class="container">
-        <header>
-            <h1>Pete's Work Phase 2</h1>
-        </header>
-        <section>
-            <h2>What's in this website?</h2>
-            <p>
-                This is the second phase of my work. I will be completing A2
-                Design Research during this page. But all of that assessment
-                will be created as pages in this website.
+        <h1 class="main-title m-b-4 p-t-8">User Stories</h1>
+
+        <section class="interview">
+            <h4 class="user-name m-b-2">
+                Blake
+            </h4>
+            <p class="initial-prompt">
+                <strong>Initial Prompt:</strong> Can you tell me about a time when you felt a strong sense of community?
+                What made that experience memorable for you?
             </p>
+            <p class="question">
+                <strong>Follow-up Question:</strong> How do you think technology can enhance or hinder the sense of
+                community in today's world?
+
+            </p>
+            <p class="response">
+                <strong>Response:</strong> I remember a local festival in my neighborhood where everyone came together
+                to celebrate our diverse cultures. <span class="interactive-highlight" data-card="
+                    This experience was unforgettable 
+                ">It was
+                    memorable because it wasn't just about the event itself, but
+                    the way people interacted, shared stories, and supported each other </span>. Technology can enhance
+                community
+                by connecting people who might not otherwise meet, but it can also hinder it if it leads to superficial
+                interactions or replaces face-to-face connections.
+            </p>
+
+            <p class="question">
+                <strong>Follow-up Question:</strong> What features would you like to see in a community-focused website
+                that would make it more engaging and useful for you?
+            </p>
+            <p class="response">
+                <strong>Response:</strong> I would love to see features like event calendars, forums
+                for discussions, and resource sharing sections. <span class="interactive-highlight" data-card="
+                    These features would help me stay informed and connected
+                ">They would make the website more engaging and useful by providing
+                    practical tools for interaction and information exchange</span>.
+            </p>
+
         </section>
     </div>
 </body>
