--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -14,6 +14,14 @@
 
 <body>
     <div class="container">
+        <nav class="nav">
+            <a class="" href="index.html">WP 2 Home</a>
+            <a class="" href="accessibility_assessment.html">Acceessibility</a>
+            <a class="" href="client_needs_analysis.html">Client Needs</a>
+            <a class="" href="ethics_analysis.html">Ethics Analysis</a>
+            <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
+            <a class="" href="user_stories.html">User Stories</a>
+        </nav>
         <h1 class="main-title m-b-4 p-t-8">User Stories</h1>
 
         <section class="interview">
