feat: custom interactive highlight for client needs

--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -39,7 +39,7 @@
             </p>
             <p class="response">
                 <strong>Response:</strong> I remember a local festival in my neighborhood where everyone came together
-                to celebrate our diverse cultures. <span class="interactive-highlight" data-card="
+                to celebrate our diverse cultures. <span class="interactive-highlight-stories" data-card="
                     This experience was unforgettable 
                 ">It was
                     memorable because it wasn't just about the event itself, but
@@ -55,7 +55,7 @@
             </p>
             <p class="response">
                 <strong>Response:</strong> I would love to see features like event calendars, forums
-                for discussions, and resource sharing sections. <span class="interactive-highlight" data-card="
+                for discussions, and resource sharing sections. <span class="interactive-highlight-stories" data-card="
                     These features would help me stay informed and connected
                 ">They would make the website more engaging and useful by providing
                     practical tools for interaction and information exchange</span>.
