feat: init js files

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -34,6 +34,7 @@
             </p>
         </section>
     </div>
+    <script type="module" src='js/accessibility_assessment.js'></script>
 </body>
 
 </html>
