--- a/work_phase_2/client_needs_analysis.html
+++ b/work_phase_2/client_needs_analysis.html
@@ -177,6 +177,7 @@
             </div>
         </section>
     </div>
+    <script type="module" src='js/client_needs_analysis.js'></script>
 </body>
 
 </html>
