--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -22,7 +22,7 @@
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
             <a class="" href="user_stories.html">User Stories</a>
         </nav>
-        <h1 class="main-title m-b-4 p-t-8">User Stories</h1>
+        <h1 class="main-title m-b-4">User Stories</h1>
 
         <section class="interview">
             <h4 class="user-name m-b-2">
@@ -63,6 +63,8 @@
 
         </section>
     </div>
+    <script type="module" src='js/user_stories.js'></script>
+
 </body>
 
 </html>
