--- a/work_phase_2/ethics_analysis.html
+++ b/work_phase_2/ethics_analysis.html
@@ -34,6 +34,7 @@
             </p>
         </section>
     </div>
+    <script type="module" src='js/ethics_analysis.js'></script>
 </body>
 
 </html>
