--- a/work_phase_2/genai_mt_acknowledgement.html
+++ b/work_phase_2/genai_mt_acknowledgement.html
@@ -34,6 +34,7 @@
             </p>
         </section>
     </div>
+    <script type="module" src='js/genai_mt_acknowledgement.js'></script>
 </body>
 
 </html>
