feat: add accessibiliy assessment page

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -9,29 +9,39 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <title>Work Phase 2</title>
+    <title>Work Phase 2 - Accessibility Assessment</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="nav">
             <a class="" href="index.html">WP 2 Home</a>
-            <a class="" href="accessibility_assessment.html">Acceessibility</a>
+            <a class="" href="accessibility_assessment.html">Accessibility</a>
             <a class="" href="client_needs_analysis.html">Client Needs</a>
             <a class="" href="ethics_analysis.html">Ethics Analysis</a>
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
             <a class="" href="user_stories.html">User Stories</a>
         </nav>
         <header>
-            <h1>Pete's Work Phase 2</h1>
+            <h2>Accessibility Assessment</h2>
         </header>
-        <section>
-            <h2>What's in this website?</h2>
-            <p>
-                This is the second phase of my work. I will be completing A2
-                Design Research during this page. But all of that assessment
-                will be created as pages in this website.
-            </p>
+
+        <section class="m-t-6">
+            <div class="accessibility-card">
+                <h3>1. Consistent Navigation (AA)</h3>
+                <h4>Success Criteria:</h4>
+                <p>
+                    Navigation mechanisms (changing pages) within a web page must have the same relative
+                    order and structure, unless the user itself deliberately changes it.
+                </p>
+                <h4>Implementation on my website:</h4>
+                <p>
+                    I will use it on my website because the website I create will contain multiple pages
+                    and each of them have different content. Therefore, the consistent navigation UI and
+                    mechanism will make the website easier to be navigated by the user. In order to do
+                    this, I will create one navigation bar, and use it for every page I created.
+                </p>
+            </div>
         </section>
     </div>
     <script type="module" src='js/accessibility_assessment.js'></script>
