feat: improve navbar

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -14,7 +14,8 @@
 
 <body>
     <div class="container">
-        <nav class="nav">
+        <button class="nav-toggle" onclick="toggleNav()">☰</button>
+        <nav class="nav" id="mobile-nav">
             <a class="" href="index.html">WP 2 Home</a>
             <a class="" href="accessibility_assessment.html">Accessibility</a>
             <a class="" href="client_needs_analysis.html">Client Needs</a>
@@ -45,6 +46,7 @@
         </section>
     </div>
     <script type="module" src='js/accessibility_assessment.js'></script>
+    <script src='js/components.js'></script>
 </body>
 
 </html>
