--- a/work_phase_2/index.html
+++ b/work_phase_2/index.html
@@ -14,9 +14,10 @@
 
 <body>
     <div class="container">
-        <nav class="nav">
+        <button class="nav-toggle" onclick="toggleNav()">☰</button>
+        <nav class="nav" id="mobile-nav">
             <a class="" href="index.html">WP 2 Home</a>
-            <a class="" href="accessibility_assessment.html">Acceessibility</a>
+            <a class="" href="accessibility_assessment.html">Accessibility</a>
             <a class="" href="client_needs_analysis.html">Client Needs</a>
             <a class="" href="ethics_analysis.html">Ethics Analysis</a>
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
@@ -35,6 +36,7 @@
         </section>
     </div>
     <script type="module" src='js/index.js'></script>
+    <script src='js/components.js'></script>
 </body>
 
 </html>
