feat: ethics analysis page

--- a/work_phase_2/accessibility_assessment.html
+++ b/work_phase_2/accessibility_assessment.html
@@ -28,7 +28,7 @@
         </header>
 
         <section class="m-t-6">
-            <div class="accessibility-card">
+            <div class="assessment-card">
                 <h3>1. Consistent Navigation (AA)</h3>
                 <h4>Success Criteria:</h4>
                 <p>
