--- a/work_phase_2/ethics_analysis.html
+++ b/work_phase_2/ethics_analysis.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <title>Work Phase 2</title>
+    <title>Work Phase 2 - Ethics Analysis</title>
 </head>
 
 <body>
     <div class="container">
-        <button class="nav-toggle" onclick="toggleNav()">☰</button>
+        <button class="nav-toggle" id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <nav class="nav" id="mobile-nav">
             <a class="" href="index.html">WP 2 Home</a>
             <a class="" href="accessibility_assessment.html">Accessibility</a>
@@ -24,15 +28,36 @@
             <a class="" href="user_stories.html">User Stories</a>
         </nav>
         <header>
-            <h1>Pete's Work Phase 2</h1>
+            <h2>Ethics Analysis</h2>
         </header>
-        <section>
-            <h2>What's in this website?</h2>
-            <p>
-                This is the second phase of my work. I will be completing A2
-                Design Research during this page. But all of that assessment
-                will be created as pages in this website.
-            </p>
+
+        <section class="m-t-6">
+            <div class="assessment-card">
+                <h3>Potential Harm 1: Lorem ipsum dolor sit amet.</h3>
+
+                <h4>ACS Value:</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris.
+                </p>
+
+                <h4>Specific Principle:</h4>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                    in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+
+                <div class="solution">
+                    <h4>Solution:</h4>
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                        veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                    </p>
+                </div>
+            </div>
         </section>
     </div>
     <script type="module" src='js/ethics_analysis.js'></script>
