--- a/work_phase_2/user_stories.html
+++ b/work_phase_2/user_stories.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
-    <title>Work Phase 2</title>
+    <title>Work Phase 2 - User Stories</title>
 </head>
 
 <body>
     <div class="container">
-        <button class="nav-toggle" onclick="toggleNav()">☰</button>
+        <button class="nav-toggle" id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <nav class="nav" id="mobile-nav">
             <a class="" href="index.html">WP 2 Home</a>
             <a class="" href="accessibility_assessment.html">Accessibility</a>
@@ -23,45 +27,57 @@
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
             <a class="" href="user_stories.html">User Stories</a>
         </nav>
-        <h1 class="main-title m-b-4">User Stories</h1>
+        <header>
+            <h2>User Stories</h2>
+        </header>
 
-        <section class="interview">
-            <h4 class="user-name m-b-2">
-                Blake
-            </h4>
-            <p class="initial-prompt">
-                <strong>Initial Prompt:</strong> Can you tell me about a time when you felt a strong sense of community?
-                What made that experience memorable for you?
-            </p>
-            <p class="question">
-                <strong>Follow-up Question:</strong> How do you think technology can enhance or hinder the sense of
-                community in today's world?
+        <section class="m-t-6">
+            <div class="assessment-card">
+                <h3>Interview 1: Blake</h3>
 
-            </p>
-            <p class="response">
-                <strong>Response:</strong> I remember a local festival in my neighborhood where everyone came together
-                to celebrate our diverse cultures. <span class="interactive-highlight-stories" data-card="
-                    This experience was unforgettable 
-                ">It was
-                    memorable because it wasn't just about the event itself, but
-                    the way people interacted, shared stories, and supported each other </span>. Technology can enhance
-                community
-                by connecting people who might not otherwise meet, but it can also hinder it if it leads to superficial
-                interactions or replaces face-to-face connections.
-            </p>
+                <h4>Initial Prompt:</h4>
+                <p>
+                    Can you tell me about a time when you felt a strong sense of community?
+                    What made that experience memorable for you?
+                </p>
 
-            <p class="question">
-                <strong>Follow-up Question:</strong> What features would you like to see in a community-focused website
-                that would make it more engaging and useful for you?
-            </p>
-            <p class="response">
-                <strong>Response:</strong> I would love to see features like event calendars, forums
-                for discussions, and resource sharing sections. <span class="interactive-highlight-stories" data-card="
-                    These features would help me stay informed and connected
-                ">They would make the website more engaging and useful by providing
-                    practical tools for interaction and information exchange</span>.
-            </p>
+                <h4>Follow-up Question:</h4>
+                <p>
+                    How do you think technology can enhance or hinder the sense of
+                    community in today's world?
+                </p>
 
+                <h4>Response:</h4>
+                <p>
+                    I remember a local festival in my neighborhood where everyone came together
+                    to celebrate our diverse cultures. <span class="interactive-highlight-stories" data-card="
+                        This experience was unforgettable 
+                    ">It was
+                        memorable because it wasn't just about the event itself, but
+                        the way people interacted, shared stories, and supported each other</span>. Technology can
+                    enhance
+                    community
+                    by connecting people who might not otherwise meet, but it can also hinder it if it leads to
+                    superficial
+                    interactions or replaces face-to-face connections.
+                </p>
+
+                <h4>Follow-up Question:</h4>
+                <p>
+                    What features would you like to see in a community-focused website
+                    that would make it more engaging and useful for you?
+                </p>
+
+                <h4>Response:</h4>
+                <p>
+                    I would love to see features like event calendars, forums
+                    for discussions, and resource sharing sections. <span class="interactive-highlight-stories"
+                        data-card="
+                        These features would help me stay informed and connected
+                    ">They would make the website more engaging and useful by providing
+                        practical tools for interaction and information exchange</span>.
+                </p>
+            </div>
         </section>
     </div>
     <script type="module" src='js/user_stories.js'></script>
