fix: swap navbar ordering

--- a/work_phase_2/ethics_analysis.html
+++ b/work_phase_2/ethics_analysis.html
@@ -14,18 +14,14 @@
 
 <body>
     <div class="container">
-        <button class="nav-toggle" id="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <button class="nav-toggle" onclick="toggleNav()">☰</button>
         <nav class="nav" id="mobile-nav">
             <a class="" href="index.html">WP 2 Home</a>
-            <a class="" href="accessibility_assessment.html">Accessibility</a>
             <a class="" href="client_needs_analysis.html">Client Needs</a>
+            <a class="" href="user_stories.html">User Stories</a>
+            <a class="" href="accessibility_assessment.html">Accessibility</a>
             <a class="" href="ethics_analysis.html">Ethics Analysis</a>
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
-            <a class="" href="user_stories.html">User Stories</a>
         </nav>
         <header>
             <h2>Ethics Analysis</h2>
