chore: tyding up client needs page

--- a/work_phase_2/client_needs_analysis.html
+++ b/work_phase_2/client_needs_analysis.html
@@ -24,20 +24,17 @@
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
         </nav>
         <header>
-            <h1>Pete's Work Phase 2</h1>
+            <h2>The Client Brief</h2>
         </header>
 
         <section class="m-t-6">
             <div class="assessment-card">
-                <h2>The Client Brief</h2>
                 <h3>About Us</h3>
                 <p>
                     We are a non-profit organisation dedicated to fostering
                     social cohesion by empowering diverse communities to share
                     their stories, <span class="interactive-highlight-stories" data-card="Value 1">connect with others
-                    </span>,
-                    and
-                    access resources
+                    </span>, and access resources
                     that enhance their visibility and influence. Our mission is
                     to strengthen societal bonds by creating platforms that
                     celebrate and support the unique identities of communities
@@ -104,9 +101,9 @@
                     </li>
                 </ul>
                 <h3>Additional Information</h3>
-                <p><strong>Target Audience</strong></p>
+                <h3>Target Audience</h3>
                 <p>Each website must serve two key groups:</p>
-                <ol>
+                <ul>
                     <li>
                         Community Members: Individuals within the selected
                         community who seek representation, resources, and
@@ -117,16 +114,15 @@
                         website to learn about the community and its
                         contributions.
                     </li>
-                </ol>
+                </ul>
                 <p>
                     Accessibility must be prioritised to ensure seamless
                     interaction for all users, including those relying on
                     assistive technologies.
                 </p>
-                <p><strong>Project Goals</strong></p>
-                <ol>
+                <h3>Project Goals</h3>
+                <ul>
                     <li>
-                        Week 5: Design Research | Creating your Client Needs Analysis Web Page
                         Represent and celebrate the identity of the chosen
                         community, recognising and representing the diversity
                         within the community rather than relying on stereotypes.
@@ -143,7 +139,7 @@
                         Ensure ethical, inclusive, and culturally sensitive
                         design principles are upheld.
                     </li>
-                </ol>
+                </ul>
 
                 <h2>Values - Needs - Feature Analysis</h2>
 
