--- a/work_phase_2/index.html
+++ b/work_phase_2/index.html
@@ -24,10 +24,10 @@
             <a class="" href="genai_mt_acknowledgement.html">Gen AI</a>
         </nav>
         <header>
-            <h1>Pete's Work Phase 2</h1>
+            <h2>Sam's Work Phase 2</h2>
         </header>
-        <section>
-            <h2>What's in this website?</h2>
+        <section class="assessment-card m-t-6">
+            <h3>What's in this website?</h3>
             <p>
                 This is the second phase of my work. I will be completing A2
                 Design Research during this page. But all of that assessment
